; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/vcdcontroltool/extr_vcdcontroltool.c_OpenLetter.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/vcdcontroltool/extr_vcdcontroltool.c_OpenLetter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i32] [i32 92, i32 92, i32 46, i32 92, i32 37, i32 99, i32 58, i32 0], align 4
@GENERIC_READ = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @OpenLetter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OpenLetter(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [255 x i32], align 16
  store i32 %0, i32* %2, align 4
  %4 = getelementptr inbounds [255 x i32], [255 x i32]* %3, i64 0, i64 0
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @wsprintf(i32* %4, i8* bitcast ([8 x i32]* @.str to i8*), i32 %5)
  %7 = getelementptr inbounds [255 x i32], [255 x i32]* %3, i64 0, i64 0
  %8 = load i32, i32* @GENERIC_READ, align 4
  %9 = load i32, i32* @FILE_SHARE_READ, align 4
  %10 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @OPEN_EXISTING, align 4
  %13 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %14 = call i32 @CreateFile(i32* %7, i32 %8, i32 %11, i32* null, i32 %12, i32 %13, i32* null)
  ret i32 %14
}

declare dso_local i32 @wsprintf(i32*, i8*, i32) #1

declare dso_local i32 @CreateFile(i32*, i32, i32, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
